--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: 'Raleway';
+    src: url("../fonts/Raleway-Bold.woff") format('woff'),
+    url("../fonts/Raleway-Bold.woff2") format('woff2');
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: 'Raleway';
+    src: url("../fonts/Raleway-ExtraBold.woff") format('woff'),
+    url("../fonts/Raleway-ExtraBold.woff2") format('woff2');
+    font-weight: 800;
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url("../fonts/Montserrat-Bold.woff") format('woff'),
+    url("../fonts/Montserrat-Bold.woff2") format('woff2');
+    font-weight: 700;
+}
+
 html {
     font-size: 15px;
 }
@@ -41,23 +62,20 @@ p {
     min-height: 100%;
     max-height: 100%;
     z-index: -2;
-    background: #D7D7D7;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    /*background: #d9d3d3;*/
+    background: radial-gradient(50% 50% at 50% 50%, rgba(26, 21, 21, 0) 0%, rgba(1, 1, 1, 0.16) 100%), #FFFFFF;
 }
 
 .container-black {
     position: absolute;
-    width: 130%;
-    min-width: 130%;
-    height: 130%;
+    width: 100%;
+    min-width: 100%;
+    height: 100%;
     min-height: 130%;
-    max-height: 130%;
-    left: 40%;
+    max-height: 100%;
+    left: 50%;
     z-index: -1;
-    /*background: #000000;*/
-
     background: linear-gradient(90.18deg, #1D1D1D 31.74%, #1D1D1D 90.49%, #1D1D1D 90.49%);
-
     transform: rotate(9.67deg);
 }
 
@@ -71,7 +89,7 @@ p {
 }
 
 .header {
-    padding: 55px;
+    padding: 40px;
     margin-bottom: 10px;
 
 }
@@ -84,7 +102,7 @@ p {
 
 .header-logo {
     display: block;
-    margin-top: -70px;
+    margin-top: 5px;
 }
 
 .header-nav {
@@ -92,21 +110,19 @@ p {
 }
 
 .header-nav-link {
-
     display: flex;
     font-size: 17px;
     font-weight: 700;
     align-items: center;
     justify-content: space-around;
 
-    color: #fff;
+    color: #3fc1c9;
     height: 46px;
     width: 147px;
     margin: 0 4px 4px;
     text-decoration: none;
     /*border: 1px solid #000000;*/
     /*text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);*/
-
 }
 
 
@@ -115,7 +131,7 @@ p {
     font-weight: bold;
     line-height: 18px;
     text-transform: uppercase;
-    color: #000000;
+    color: #3fc1c9;
     border-radius: 30px;
     background: #FFFFFF;
     border: 4px solid #FFFFFF;
@@ -123,7 +139,7 @@ p {
 }
 
 .header-nav-link:hover {
-    color: #3fc1c9;
+    color: #2e8a91;
 }
 
 .header-nav-link.active {
@@ -144,8 +160,9 @@ p {
 
 
 .content {
+    padding-top: 20px;
     color: #ffffff;
-    width: 30%;
+    width: 45%;
     height: 100%;
     max-width: 565px;
 }
@@ -155,47 +172,56 @@ p {
 }
 
 .subtitle {
-    font-family: Raleway,sans-serif;
+    font-family: Raleway, sans-serif;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
     line-height: 47px;
-    display: flex;
-    text-align: center;
-
     font-size: 2.4rem;
-    color: rgba(255, 255, 255, 0.6);
+    text-align: center;
+    color: #000000;
 
-
-}
+    display: flex;
+    }
 
 .title {
+    font-family: Raleway, sans-serif;
+    font-style: normal;
+    font-weight: 700;
     margin-bottom: 10px;:;
-    font-size: 2rem;
-    color: #fff;
-    font-weight: 500;
+    font-size: 4rem;
+    color: #000000;
     line-height: 1.2;
 
 }
 
 .title span {
-    color: #2b7ded;
+    font-family: Raleway, sans-serif;
+    font-size: 2rem;
+    color: #000000;
+
 }
 
 .text {
     margin-bottom: 50px;
+    color: #909090;
 
-    font-size: 1rem;
-    color: #ffffff;
+    font-size: 1.5rem;
 }
 
 .footer {
     width: 100%;
-    height: 20%;
-    min-height: 20%;
+    height: 10%;
+    min-height: 10%;
     position: absolute;
     bottom: 0px;
     left: 0;
     background: linear-gradient(90.18deg, #1D1D1D 31.74%, #1D1D1D 90.49%, #1D1D1D 90.49%)
+}
+.author {
+    position: absolute;
+    bottom: 0;
+    right: 40px;
+    /*filter: drop-shadow(5px 5px 5px #FFFFFF);*/
 }
 
 .contacts {
@@ -204,6 +230,9 @@ p {
 }
 
 .contacts-link {
+    display: flex;
+    align-items: center;
+
     margin-right: 2rem;
     font-size: 1rem;
     color: #ffffff;
@@ -213,6 +242,7 @@ p {
 
 .contacts-link:hover {
     text-decoration: underline;
+
 }
 
 .contacts-link:last-child {
@@ -222,5 +252,9 @@ p {
 
 .contacts-icon {
     margin-right: 5px;
-
+    height: 16px;
+    width: 16px;
+    color: #FFFFFF;
+    background-color: #FFFFFF;
+    border-radius: 3px;
 }
